Add few code and picture on index.html

--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
     <title>My Dicoding Task</title>
 </head>
 <body>
-    <p>Ini adalah latihan dari Dicoding Academy.</p>
+    <h1>Ini adalah latihan dari Dicoding Academy.</h1>
+    <div>
+        <img src="Images/SAM.jpg" sizes="720" alt="My Picture"/>
+        <h2>Samuel Didik Gunawan</h2>
+    </div>
 </body>
