Add some style and ID on source code.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>My Dicoding Task</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Ini adalah latihan dari Dicoding Academy.</h1>
-    <div>
-        <img src="Images/SAM.jpg" sizes="720" alt="My Picture"/>
-        <h2>Samuel Didik Gunawan</h2>
+    <div id="sam-container">
+        <img id="sam-image" src="Images/SAM.jpg" alt="My Picture"/>
+        <h2 id="sam-name">Samuel Didik Gunawan</h2>
     </div>
 </body>
